# cholesterol-lowering-supplement-classification

./: README.md  predict_cholesterol_Gryko.ipynb  predict_cholesterol_Gryko.xlsx  predict_cholesterol_surname_name.ipynb  pyproject.toml
data/: predict_cholesterol.xlsx  train_choloesterol.xlsx
