[project]
name = "cholesterol-lowering-supplement-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Gryko",email = "piotr.gryko@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.10"

